2003-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/glissando-engraver.cc (stop_translation_timestep): backport
	of glissando bugfix.

2003-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely (More about pitches and
	accidentals): typo.

2003-08-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Fingering instructions): 

	* lily/new-fingering-engraver.cc (position_scripts): don't crash
	for borderline cases. 

2003-08-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/bug-lilypond-cygwin.sh: Run latex on lily output (WAS: tex).

	* stepmake/stepmake/generic-vars.make: Check for i686-cygwin arch
	too.

2003-08-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (compose_full_body): Do not emit
	\renameinput.

2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py (command_name): robustification

	* scripts/lilypond-book.py: idem.

	* scripts/ly2dvi.py: backport latex redirect fix.

	* Documentation/bibliography/engraving.bib (year): typos.

2003-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	add note about -Ppdf

2003-08-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/slur.cc (get_attachment): bugfix: don't crash on non-cons
	attachment property.

	* Documentation/user/refman.itely: url fixes.

	* po/sv.po: new po

2003-08-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): Branch lilypond_1_8, release 1.8.1 

	* Documentation/user/refman.itely (Text markup): add comment about
	markup in header.

2003-08-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/paper-outputter.cc (write_header_fields_to_file): 
	only dump value if it is a string.

	* flower/include/dictionary.hh: remove.
	
	* Documentation/ChangeLog-1.5: add back old log.

	* Documentation/topdocs/INSTALL.texi (Top): explain how to get
	.pfas from a .deb.

2003-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
